Bug 903051 - Prevent aborted loads from messing with ChannelMediaResource state. r=roc, a=lsblakk